--- a/data cleaning/Data Cleaning For Loop.ipynb
+++ b/data cleaning/Data Cleaning For Loop.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,193 +84,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in supermarket_csv:\n",
-    "    frame = data_cleaner(i)\n",
-    "    csvpath = \"cleaned_\" + i\n",
-    "    frame.to_csv(csvpath)"
+    "#for i in supermarket_csv:\n",
+    "   # frame = data_cleaner(i)\n",
+    "   # csvpath = \"cleaned_\" + i\n",
+    "   # frame.to_csv(csvpath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data_cleaner(supermarket_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat = [\"../supermarket_csvs/category_116_frame.csv\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Unit</th>\n",
-       "      <th>Packet Size</th>\n",
-       "      <th>Supermarket</th>\n",
-       "      <th>Comparable Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Coca Cola</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>100 ml</td>\n",
-       "      <td>Pet-Flasche 1.25 L</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>0.079</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Dulano Delikatess Wiener Würstchen knackig und...</td>\n",
-       "      <td>2.79</td>\n",
-       "      <td>100 Gramm</td>\n",
-       "      <td>Packung 400 Gramm</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>0.698</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Gebirgsjäger Delikatess Frikadellen 5 Stück</td>\n",
-       "      <td>1.99</td>\n",
-       "      <td>100 Gramm</td>\n",
-       "      <td>Packung 500 Gramm</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>0.398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Nutella</td>\n",
-       "      <td>3.99</td>\n",
-       "      <td>100 Gramm</td>\n",
-       "      <td>Vorteils Glas 1000 Gramm</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>0.399</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Master Crumble Schoko-Knusper</td>\n",
-       "      <td>1.79</td>\n",
-       "      <td>100 Gramm</td>\n",
-       "      <td>Packung 750 Gramm</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>0.239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5483</td>\n",
-       "      <td>Veltins V+ Curuba</td>\n",
-       "      <td>2.79</td>\n",
-       "      <td>100 Gramm</td>\n",
-       "      <td>XXL Packung 200 Gramm, ca. 50 Scheiben</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>1.400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5484</td>\n",
-       "      <td>Valensina Frühstücks Nektar Orange Mango Honig</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>100 ml</td>\n",
-       "      <td>Pet-Flasche 1 L</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>0.088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5485</td>\n",
-       "      <td>MM Extra Sekt Rose trocken</td>\n",
-       "      <td>2.69</td>\n",
-       "      <td>100 ml</td>\n",
-       "      <td>Flasche Glas 0.75 L</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>0.359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5486</td>\n",
-       "      <td>Arla Svenso geschnitten</td>\n",
-       "      <td>1.49</td>\n",
-       "      <td>100 Gramm</td>\n",
-       "      <td>Packung 150 Gramm</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>0.990</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5487</td>\n",
-       "      <td>Ehrmann Monster Backe Erdbeere</td>\n",
-       "      <td>0.69</td>\n",
-       "      <td>100 Gramm</td>\n",
-       "      <td>Multipackung 135 Gramm</td>\n",
-       "      <td>lidl</td>\n",
-       "      <td>0.510</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5488 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   Name  Price       Unit  \\\n",
-       "0                                             Coca Cola   0.99     100 ml   \n",
-       "1     Dulano Delikatess Wiener Würstchen knackig und...   2.79  100 Gramm   \n",
-       "2           Gebirgsjäger Delikatess Frikadellen 5 Stück   1.99  100 Gramm   \n",
-       "3                                               Nutella   3.99  100 Gramm   \n",
-       "4                         Master Crumble Schoko-Knusper   1.79  100 Gramm   \n",
-       "...                                                 ...    ...        ...   \n",
-       "5483                                  Veltins V+ Curuba   2.79  100 Gramm   \n",
-       "5484     Valensina Frühstücks Nektar Orange Mango Honig   0.88     100 ml   \n",
-       "5485                         MM Extra Sekt Rose trocken   2.69     100 ml   \n",
-       "5486                            Arla Svenso geschnitten   1.49  100 Gramm   \n",
-       "5487                     Ehrmann Monster Backe Erdbeere   0.69  100 Gramm   \n",
-       "\n",
-       "                                 Packet Size Supermarket  Comparable Price  \n",
-       "0                         Pet-Flasche 1.25 L        lidl             0.079  \n",
-       "1                          Packung 400 Gramm        lidl             0.698  \n",
-       "2                          Packung 500 Gramm        lidl             0.398  \n",
-       "3                   Vorteils Glas 1000 Gramm        lidl             0.399  \n",
-       "4                          Packung 750 Gramm        lidl             0.239  \n",
-       "...                                      ...         ...               ...  \n",
-       "5483  XXL Packung 200 Gramm, ca. 50 Scheiben        lidl             1.400  \n",
-       "5484                         Pet-Flasche 1 L        lidl             0.088  \n",
-       "5485                     Flasche Glas 0.75 L        lidl             0.359  \n",
-       "5486                       Packung 150 Gramm        lidl             0.990  \n",
-       "5487                  Multipackung 135 Gramm        lidl             0.510  \n",
-       "\n",
-       "[5488 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/oliviatonkin/Data-thieves/data cleaning\r\n"
+     ]
     }
    ],
    "source": [
-    "data_cleaner(supermarket_csv)"
+    "!pwd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Invalid file path or buffer object type: <class 'list'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-92b81fd50123>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_cleaner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-3ffb5ae9a252>\u001b[0m in \u001b[0;36mdata_cleaner\u001b[0;34m(supermarket_input)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msupermarket_input\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0maldi_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    683\u001b[0m         )\n\u001b[1;32m    684\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 685\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    686\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    687\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    438\u001b[0m     \u001b[0;31m# See https://github.com/python/mypy/issues/1297\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m     fp_or_buf, _, compression, should_close = get_filepath_or_buffer(\n\u001b[0;32m--> 440\u001b[0;31m         \u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    441\u001b[0m     )\n\u001b[1;32m    442\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"compression\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/site-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_filepath_or_buffer\u001b[0;34m(filepath_or_buffer, encoding, compression, mode)\u001b[0m\n\u001b[1;32m    222\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m         \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Invalid file path or buffer object type: {_type}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 224\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    225\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    226\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompression\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Invalid file path or buffer object type: <class 'list'>"
+     ]
+    }
+   ],
+   "source": [
+    "data_cleaner(cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
