Updated read me and analysis

--- a/data_cleaning/final_analysis_loop.ipynb
+++ b/data_cleaning/final_analysis_loop.ipynb
@@ -75,7 +75,7 @@
     "        \n",
     "# save compare frame individually\n",
     "\n",
-    "compare_frame.to_csv(\"compareframe.csv\")"
+    "compare_frame.to_csv(\"compareframe.csv\")\n"
    ]
   },
   {
